apps/match-rally/deploy.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: match-rally
  namespace: default
  labels:
    app: match-rally
spec:
  replicas: 1
  selector:
    matchLabels:
      app: match-rally
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 0
  template:
    metadata:
      name: match-rally
      labels:
        app: match-rally
    spec:
      containers:
        - name: match-rally
          image: ghcr.io/wisvch/match-rally:20260520-fb3b291 # {"$imagepolicy": "flux-system:match-rally"}
          imagePullPolicy: IfNotPresent
          ports:
            - name: http
              containerPort: 3000
              protocol: TCP
          livenessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          readinessProbe:
            httpGet:
              path: /
              port: http
            initialDelaySeconds: 15
            periodSeconds: 20
            successThreshold: 1
            timeoutSeconds: 5
          resources:
            limits:
              memory: 512Mi
              cpu: 200m
            requests:
              cpu: 50m
              memory: 150Mi
          volumeMounts:
            - mountPath: /storage
              name: match-rally-storage
      volumes:
        - name: match-rally-storage
          persistentVolumeClaim:
            claimName: match-rally-disk
