apps/match-rally/service.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: match-rally
  name: match-rally
  namespace: default
spec:
  ports:
  - name: http
    port: 3000
    protocol: TCP
    targetPort: 3000
  selector:
    app: match-rally
  sessionAffinity: None
  type: ClusterIP
