apps/match-rally/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1beta1
kind: HTTPRoute
metadata:
  name: match-rally
  namespace: default
spec:
  parentRefs:
  - kind: Gateway
    namespace: gateway-infra
    name: gateway
  hostnames:
  - match-rally.wisv.ch
  rules:
  - backendRefs:
    - name: match-rally
      port: 3000
